[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-vote-us"
version = "0.1.0"
dependencies = ["requests"]
authors = [
    { name = "Flxzor", email = "felixerlangga.contact@gmail.com" },
]
description = "Vote plugin for your Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "vote"]

[project.urls]
Homepage = "https://github.com/flxzor/VoteUs"

[project.entry-points."endstone"]
vote-us = "endstone_vote_us:VoteUsPlugin"
